# potc

./: .gitignore  CMakeLists.txt  README.md  design.org  lint.sh  test_random.py  test_read.py  test_write.py
docker/: Dockerfile  benchmark.sh  common-test.sh  run-copy-cluster.sh  run-copy.sh  run-test.sh  run.sh  test-intel-rebo-regular.sh  test-intel-rebo.sh  test-intel.sh  test-kokkos.sh  test.sh
info/sc18-poster/abstract/: extended.tex
info/sc18-poster/poster/: beamerthemeAICESposter.sty  content.tex  data-old.txt  hpac-rwth-old.eps  hpac-rwth.eps  poster.tex
info/sc18-poster/repro/: repro.tex
notebooks/: Splines.ipynb
potentials/: Cu.eam.potc-param  adp.potc  eam.potc  eim.potc  lennard-jones.potc  rebo.potc  sw.potc  tersoff.potc  test-const-param.potc  test-const-piece.potc  test-const.potc  test-var.potc
scripts/: statbench.py  trans.sh
src/: ana_comm.h  der.h  der_visitor.cc  expr.h  expr_base.h  gen.h  gen_intel_generator.h  gen_intel_visitor.h  gen_internal.h  gen_internal_test.cc  gen_kokkos_generator.h  gen_kokkos_visitor.h  gen_print.cc  gen_regular_generator.h  gen_regular_visitor.h  gen_spline.cc  gen_spline.h  intel_intrinsics_potc.h  ir.h  ir_build.h  ir_visitor.cc  ir_visitor.h  ir_visitor_empty.h  main.cc  main_test.cc  opt.h  opt_arithmetic.cc  opt_check.cc  opt_duplicate.cc  opt_fold_invalid.cc  opt_fuse.cc  opt_invariant.cc  opt_kokkos_pushdown.cc  opt_param.cc  opt_redundant_decl.cc  opt_shorten.cc  opt_thread.cc  opt_unused.cc  opt_vectorize.cc  parser.cc  (+2 more)
test/inputs/: CH.rebo.potc-param  Ni.adp.potc-param  analyze.py  beep.sh  in.adp.gen  in.eam.gen  in.eim  in.eim.gen  in.kk  in.rebo  in.rebo.gen  in.tersoff.gen
